--- a/index.html
+++ b/index.html
@@ -83,24 +83,44 @@ color:#aaa;
 <div class="container">
 
 <div class="card">
-<img src="yellow.jpg">
-<h3>Luxury Yellow Traditional Cloth</h3>
-<div class="price">₹21,000</div>
-<button onclick="order('Luxury Yellow Traditional Cloth','21000')">Order on WhatsApp</button>
+  <img src="gold.jpg" alt="Golden Traditional Cloth">
+  <h3>Luxury Golden Traditional Cloth</h3>
+  <p class="price">₹21,000</p>
+  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
 </div>
 
 <div class="card">
-<img src="black.jpg">
-<h3>Classic Black Traditional Cloth</h3>
-<div class="price">₹7,599</div>
-<button onclick="order('Classic Black Traditional Cloth','7599')">Order on WhatsApp</button>
+  <img src="green.jpg" alt="Green Floral Traditional Cloth">
+  <h3>Premium Green Floral Traditional Cloth</h3>
+  <p class="price">₹21,099</p>
+  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
 </div>
 
 <div class="card">
-<img src="pink.jpg">
-<h3>Royal Pink Traditional Cloth</h3>
-<div class="price">₹27,000</div>
-<button onclick="order('Royal Pink Traditional Cloth','27000')">Order on WhatsApp</button>
+  <img src="blue.jpg" alt="Sky Blue Traditional Cloth">
+  <h3>Elegant Sky Blue Traditional Cloth</h3>
+  <p class="price">₹20,999</p>
+  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+</div>
+  <div class="card">
+  <img src="yellow.jpg">
+  <h3>Luxury Yellow Traditional Cloth</h3>
+  <p class="price">₹20,999</p>
+  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+</div>
+
+  <div class="card">
+  <img src="black.jpg">
+  <h3>Classic Black Traditional Cloth</h3>
+  <p class="price">₹20,999</p>
+  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+</div>
+
+ <div class="card">
+ <img src="pink.jpg">
+ <h3>Royal Pink Traditional Cloth</h3>
+ <p class="price">₹20,999</p>
+  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
 </div>
 
 </div>
@@ -117,3 +137,4 @@ window.open(`https://wa.me/${phone}?text=${encodeURIComponent(message)}`,'_blank
 
 </body>
 </html>
+
