--- a/index.html
+++ b/index.html
@@ -86,41 +86,41 @@ color:#aaa;
   <img src="gold.jpg" alt="Golden Traditional Cloth">
   <h3>Luxury Golden Traditional Cloth</h3>
   <p class="price">₹21,000</p>
-  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+  <a href="https://wa.me/916366305808?text=Hello%20I%20want%20to%20order%20Luxury%20Golden%20Traditional%20Cloth%20for%20₹21,000" class="btn">Order on WhatsApp</a>
 </div>
 
 <div class="card">
   <img src="green.jpg" alt="Green Floral Traditional Cloth">
   <h3>Premium Green Floral Traditional Cloth</h3>
   <p class="price">₹21,099</p>
-  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+ <a href="https://wa.me/916366305808?text=Hello%20I%20want%20to%20order%20Premium%20Green%20Floral%20Traditional%20Cloth%20for%20₹21,099" class="btn">Order on WhatsApp</a>
 </div>
 
 <div class="card">
   <img src="blue.jpg" alt="Sky Blue Traditional Cloth">
   <h3>Elegant Sky Blue Traditional Cloth</h3>
   <p class="price">₹20,999</p>
-  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+  <a href="https://wa.me/916366305808?text=Hello%20I%20want%20to%20order%20Elegant%20Sky%20Blue%20Traditional%20Cloth%20for%20₹20,999" class="btn">Order on WhatsApp</a>
 </div>
   <div class="card">
   <img src="yellow.jpg">
   <h3>Luxury Yellow Traditional Cloth</h3>
   <p class="price">₹20,999</p>
-  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+  <a href="https://wa.me/916366305808?text=Hello%20I%20want%20to%20order%20Luxury%20Yellow%20Traditional%20Cloth%20for%20₹21,000" class="btn">Order on WhatsApp</a>
 </div>
 
   <div class="card">
   <img src="black.jpg">
   <h3>Classic Black Traditional Cloth</h3>
   <p class="price">₹20,999</p>
-  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+  <a href="https://wa.me/916366305808?text=Hello%20I%20want%20to%20order%20Classic%20Black%20Traditional%20Cloth%20for%20₹7,599" class="btn">Order on WhatsApp</a>
 </div>
 
  <div class="card">
  <img src="pink.jpg">
  <h3>Royal Pink Traditional Cloth</h3>
  <p class="price">₹20,999</p>
-  <a href="https://wa.me/916366305808" class="btn">Order on WhatsApp</a>
+  <a href="https://wa.me/916366305808?text=Hello%20I%20want%20to%20order%20Royal%20Pink%20Traditional%20Cloth%20for%20₹20,999" class="btn">Order on WhatsApp</a>
 </div>
 
 </div>
@@ -137,4 +137,5 @@ window.open(`https://wa.me/${phone}?text=${encodeURIComponent(message)}`,'_blank
 
 </body>
 </html>
+
 
