--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="manifest" href="manifest.json">
+<link rel="icon" href="icon-512.png">
 <title>Sanamacha Rani Collection</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -137,5 +139,6 @@ window.open(`https://wa.me/${phone}?text=${encodeURIComponent(message)}`,'_blank
 
 </body>
 </html>
+
 
 
