--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <link rel="manifest" href="manifest.json">
-<link rel="icon" href="icon-512.png">
+<link rel="icon" href="icon-192.png">
+<meta name="theme-color" content="#000000">
 <title>Sanamacha Rani Collection</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -139,6 +140,7 @@ window.open(`https://wa.me/${phone}?text=${encodeURIComponent(message)}`,'_blank
 
 </body>
 </html>
+
 
 
 
